WanaLyzer/out/numpy/typing/tests/data/pass/simple_py3.pyi
from _typeshed import Incomplete

array: Incomplete
