WanaLyzer/out/numpy/typing/tests/data/fail/array_constructors.pyi
import numpy as np
from _typeshed import Incomplete

a: np.ndarray
generator: Incomplete
